--- a/src/components/Gallery.css
+++ b/src/components/Gallery.css
@@ -2,14 +2,21 @@
 .gallery-container {
     text-align: center;
     padding: 20px;
-    width: 90%;
+    width: 91.5%;
+    margin: auto;
+    display: flex;
+    justify-content: space-around;
 }
 
 .gallery {
     display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    gap: 20px;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 15px;
     margin-top: 20px;
+    height: 500px;
+    overflow-x: scroll;
+    scrollbar-width: none;
+    color: #0A173A;
 }
 
 .gallery-card {
@@ -18,7 +25,8 @@
     border-radius: 8px;
     cursor: pointer;
     transition: transform 0.3s ease;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+    color: #0A173A;
 }
 
 .gallery-card:hover {
@@ -26,7 +34,7 @@
 }
 
 .gallery-card.active {
-  border: 2px solid #4caf50;
+  /* border: 2px solid #4caf50; */
   transform: scale(1.05);
   transition: all 0.2s ease;
 }
@@ -34,10 +42,16 @@
 
 /* Horizontal Control Bar Styling */
 .controls {
-    margin-top: 30px;
+    margin-top: 20px;
     padding: 20px;
     border: 2px solid #ccc;
     border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: start;
+    background-color: white;
+    width: 65%;
 }
 
 .controls h2 {
@@ -46,20 +60,28 @@
 
 .control-bar {
     display: flex;
-    justify-content: center;
-    gap: 20px;
-    align-items: center;
+    justify-content: space-between;
+    gap: 90px;
+    /* align-items: center; */
     margin-bottom: 20px;
 }
 
 .control-bar label {
-    font-size: 16px;
+    font-size: 20px;
     display: flex;
     align-items: center;
+    color: #0A173A;
+    /* border: 2px solid #0A173A; */
+    border-radius: 20px;
+    padding: 0px 5px;
+    background: white;
+    box-shadow: 0px 5px 8px lightgray;
 }
 
 .control-bar input[type="color"] {
     margin-left: 10px;
+    background: none;
+    border: none;
 }
 
 .control-bar input[type="range"] {
@@ -69,14 +91,15 @@
 
 /* Display the selected animation */
 .selected-animation {
-    margin: 40px 0px;
-    padding: 20px;
+    /* margin-top: 50px; */
+    padding-top: 120px;
     /* border: 2px solid #ccc;
     border-radius: 10px;
     background-color: #f4f4f4; */
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    /* display: flex;
+    justify-content: left;
+    align-items: center; */
+    text-align: center;
 }
 
 .selected-animation h3 {
