--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,46 +1,92 @@
 .home-container {
-  width: 90%;
-  margin: auto;
-  padding: 10px 20px 80px;
-  font-family: 'Poppins', sans-serif;
+  /* background-color: #0f0f0f; dark background */
+  color: white;
+  height: auto;
+  width: 100%;
+}
+
+/* Animations Intro Section */
+.animations-intro-section {
+  padding: 30px 20px;
   text-align: center;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  color: white;
 }
 
-.hero-title {
+.animations-intro-title {
   font-size: 2.5rem;
-  color: #333;
-  margin-bottom: 8px;
+  font-weight: 700;
+  margin-bottom: 20px;
+  color: white;
+  /* margin-top: -20px; */
 }
 
-.hero-subtitle {
-  color: #555;
-  font-size: 1.1rem;
-  margin-bottom: 30px;
+.animations-intro-subtitle {
+  font-size: 1.2rem;
+  max-width: 700px;
+  margin: 0 auto;
+  line-height: 1.6;
+  color: white;
 }
 
-.controls {
+.bubbles img {
+  width: 50px;
+  /* height: 50px; */
+  animation: bubble 12s linear infinite;
+}
+
+.bubbles {
+  width: 100%;
   display: flex;
-  justify-content: center;
-  gap: 30px;
-  margin-top: 30px;
+  justify-content: space-around;
+  position: absolute;
+  bottom: -70px;
 }
 
-.controls label {
-  display: flex;
-  flex-direction: column;
-  font-size: 14px;
-  color: #444;
+@keyframes bubble {
+  0%{
+    transform: translateY(0);
+    opacity: 0;
+  }
+  50%{
+    /* transform: translateY(0); */
+    opacity: 1;
+  }
+  70%{
+    /* transform: translateY(0); */
+    opacity: 1;
+  }
+  100%{
+    transform: translateY(-80vh);
+    opacity: 0;
+  }
 }
 
-.controls input[type="color"],
-.controls input[type="number"] {
-  margin-top: 6px;
-  padding: 6px;
-  border-radius: 6px;
-  border: 1px solid #ccc;
-  width: 120px;
-  font-size: 16px;
+.bubbles img:nth-child(1){
+  animation-delay: 2s;
+  width: 25px;
+  height: 25px;
+}
+.bubbles img:nth-child(2){
+  animation-delay: 1s;
+}
+.bubbles img:nth-child(3){
+  animation-delay: 3s;
+  width: 25px;
+  height: 25px;
+}
+.bubbles img:nth-child(4){
+  animation-delay: 4.5s;
+}
+.bubbles img:nth-child(5){
+  animation-delay: 5s;
+  width: 36px;
+  height: 36px;
+}
+.bubbles img:nth-child(6){
+  animation-delay: 3s;
+}
+.bubbles img:nth-child(7){
+  animation-delay: 6s;
+  width: 30px;
+  height: 30px;
 }
