--- a/src/components/Gallery.css
+++ b/src/components/Gallery.css
@@ -27,6 +27,7 @@
     transition: transform 0.3s ease;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
     color: #0A173A;
+    height: fit-content;
 }
 
 .gallery-card:hover {
@@ -61,9 +62,10 @@
 .control-bar {
     display: flex;
     justify-content: space-between;
-    gap: 90px;
+    /* gap: 90px; */
     /* align-items: center; */
     margin-bottom: 20px;
+    width: 100%;
 }
 
 .control-bar label {
@@ -92,14 +94,16 @@
 /* Display the selected animation */
 .selected-animation {
     /* margin-top: 50px; */
-    padding-top: 120px;
+    /* padding-top: 120px; */
     /* border: 2px solid #ccc;
-    border-radius: 10px;
-    background-color: #f4f4f4; */
+    border-radius: 10px;*/
+     background-color: black;
     /* display: flex;
     justify-content: left;
     align-items: center; */
     text-align: center;
+    width: 100%;
+    margin: auto;
 }
 
 .selected-animation h3 {
