--- a/src/components/Gallery.css
+++ b/src/components/Gallery.css
@@ -2,7 +2,7 @@
 .gallery-container {
     text-align: center;
     padding: 20px;
-    width: 91.5%;
+    width: 100%;
     margin: auto;
     display: flex;
     justify-content: space-around;
@@ -20,7 +20,7 @@
 }
 
 .gallery-card {
-    background-color: #ddd;
+    background: none;
     padding: 0px;
     border-radius: 8px;
     cursor: pointer;
@@ -45,13 +45,13 @@
 .controls {
     margin-top: 20px;
     padding: 20px;
-    border: 2px solid #ccc;
+    /* border: 2px solid #ccc; */
     border-radius: 10px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: start;
-    background-color: white;
+    background: none;
     width: 65%;
 }
 
