--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,5 +1,5 @@
 .header {
-  /* background-color: #4caf50; */
+  background-color: rgba(211, 208, 208, 0.1);
   padding: 0px 50px;
   box-shadow: 5px 5px 8px rgba(0,0,0,0.1);
   display: flex;
@@ -11,6 +11,7 @@
   border-radius: 50px;
   position: sticky;
   top: 16px;
+  z-index: 999999;
 }
 
 .logo {
