--- a/src/App.css
+++ b/src/App.css
@@ -32,7 +32,7 @@ body{
 
 /* 🌈 Gradient Text Global Setup */
 h1, h2, h3, h4, h5, h6, p, span, a, label, button {
-  background: white;
+  background-color: white;
   background-size: 400% 400%;
   /* -webkit-background-clip: text; */
   /* -webkit-text-fill-color: transparent; */
